--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 <p>I'm passionate about building websites and learning new technologies. Currently exploring the exciting world of web development!</p>
                 <a href="#projects" class="btn">View My Work</a>
                 <div class="social-icons">
-                    <a href="#" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/priyansh1224" title="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="www.linkedin.com/in/priyanshu-oli-13a913290" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" title=""><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="hero-animation">
@@ -233,7 +233,7 @@
                     <div class="project-img">
                         <img src="./img/project1.png" alt="Personal Portfolio">
                         <div class="project-links">
-                            <a href="#" class="project-link" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="www.linkedin.com/in/priyanshu-oli-13a913290" class="project-link" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link" title="View Code"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -251,9 +251,9 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="./img/project2.png" alt="Todo App">
+                        <img src="./img/project2.png" alt="event organizer">
                         <div class="project-links">
-                            <a href="#" class="project-link" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="www.linkedin.com/in/priyanshu-oli-13a913290" class="project-link" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link" title="View Code"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="./img/project3.png" alt="Weather App">
+                        <img src="./img/project3.png" alt="Swiggy">
                         <div class="project-links">
                             <a href="#" class="project-link" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link" title="View Code"><i class="fab fa-github"></i></a>
@@ -291,7 +291,7 @@
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="./img/project4.png" alt="Recipe Finder">
+                        <img src="./img/project4.png" alt="animal planet">
                         <div class="project-links">
                             <a href="#" class="project-link" title="Live Demo"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link" title="View Code"><i class="fab fa-github"></i></a>
